Materialize CSS 1.0 beta + compiled with correct colors + waves-light

--- a/gesassos/static/gesassos/css/style.css
+++ b/gesassos/static/gesassos/css/style.css
@@ -107,6 +107,7 @@ li.collection-item.expandable {
 	width: 100%;
 	left: 0%;
 	margin: 0em;
+	border-color: #e0e0e0;
 }
 
 li.collection-item.expanded {
