--- a/gesassos/templates/partials/footer.html
+++ b/gesassos/templates/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="page-footer amber">
+<footer class="page-footer">
   <div class="footer-copyright">
     <div class="container">
-    Réalisé par le SiMDE avec <a class=" amber-text text-lighten-4" href="http://materializecss.com">Materialize</a> :)
+    Réalisé par le SiMDE avec <a class="amber-text text-lighten-4" href="http://materializecss.com">Materialize</a> :)
     </div>
   </div>
 </footer>
